RESOLVED FIXED209422
RemoteAudioSession should listen to GPUProcess messages
https://bugs.webkit.org/show_bug.cgi?id=209422
Summary RemoteAudioSession should listen to GPUProcess messages
youenn fablet
Reported 2020-03-23 06:08:23 PDT
RemoteAudioSession should listen to GPUProcess messages
Attachments
Patch (2.09 KB, patch)
2020-03-23 06:12 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-03-23 06:12:56 PDT
EWS
Comment 2 2020-03-23 07:26:39 PDT
Committed r258838: <https://trac.webkit.org/changeset/258838> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394258 [details].
Radar WebKit Bug Importer
Comment 3 2020-03-23 07:27:12 PDT
Ryosuke Niwa
Comment 4 2020-03-25 18:52:19 PDT
Comment on attachment 394258 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=394258&action=review > Source/WebKit/WebProcess/GPU/media/RemoteAudioSession.cpp:52 > + m_process.ensureGPUProcessConnection().messageReceiverMap().addMessageReceiver(Messages::RemoteAudioSession::messageReceiverName(), 0, *this); Ugh... we shouldn't be using the destination ID of 0. That'll immediately hit an assertion failure: https://bugs.webkit.org/show_bug.cgi?id=209575
Note You need to log in before you can comment on or make changes to this bug.