RemoteAudioSession should listen to GPUProcess messages https://bugs.webkit.org/show_bug.cgi?id=209422

Reviewed by Eric Carlson.

Make sure RemoteAudioSession is registered as a listener to GPUProcess messages.

* WebProcess/GPU/media/RemoteAudioSession.cpp:
(WebKit::RemoteAudioSession::RemoteAudioSession):
(WebKit::RemoteAudioSession::~RemoteAudioSession):


Canonical link: https://commits.webkit.org/222343@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258838 268f45cc-cd09-0410-ab3c-d52691b4dbfc