Source/WebKit/WebProcess/GPU/media/RemoteAudioSession.cpp
@@ -30,6 +30,7 @@
 
 #include "GPUConnectionToWebProcessMessages.h"
 #include "GPUProcessProxy.h"
+#include "RemoteAudioSessionMessages.h"
 #include "RemoteAudioSessionProxyMessages.h"
 #include <WebCore/PlatformMediaSessionManager.h>
 
@@ -48,9 +49,14 @@ RemoteAudioSession::RemoteAudioSession(WebProcess& process, RemoteAudioSessionCo
     : m_process(process)
     , m_configuration(WTFMove(configuration))
 {
+    m_process.ensureGPUProcessConnection().messageReceiverMap().addMessageReceiver(Messages::RemoteAudioSession::messageReceiverName(), 0, *this);
 }
 
-RemoteAudioSession::~RemoteAudioSession() = default;
+RemoteAudioSession::~RemoteAudioSession()
+{
+    if (auto* connection = m_process.existingGPUProcessConnection())
+        connection->messageReceiverMap().removeMessageReceiver(Messages::RemoteAudioSession::messageReceiverName(), 0);
+}
 
 IPC::Connection& RemoteAudioSession::connection()
 {
